# omthub

./: Cargo.toml  deny.toml  diesel.toml  flake.nix  fly.toml  justfile
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/clients/: Cargo.toml
crates/clients/src/: lib.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: artifact.rs  lib.rs  meta.rs  mother_tongue.rs  schema.rs  ssr.rs  user.rs  utils.rs
crates/db/: Cargo.toml
crates/db/migrations/migrations/: 20240529_155124_AddDefaultUser.surql  20240529_155906_AddDefaultMotherTongues.surql  20240619_152530_AddMotherTonguesAnalyzer.surql
crates/db/migrations/migrations/definitions/: 20240529_155906_AddDefaultMotherTongues.json  20240619_152530_AddMotherTonguesAnalyzer.json  _initial.json
crates/db/migrations/schemas/: artifacts.surql  created_artifact.surql  created_mother_tongues.surql  mother_tongues.surql  users.surql
crates/db/src/: lib.rs
crates/site-app/: Cargo.toml
crates/site-app/src/: error_template.rs  helpers.rs  lib.rs
crates/site-app/src/components/: action_status.rs  icons.rs  logout.rs  mini_pages.rs  mod.rs  mother_tongues_table.rs  navbar.rs  pagination.rs
crates/site-app/src/functions/: auth.rs  fetch.rs  mod.rs
crates/site-app/src/helpers/: navigation.rs
crates/site-app/src/pages/: account.rs  all_tongues.rs  all_translations.rs  homepage.rs  login.rs  mod.rs  mother_tongue.rs  new_translation.rs  signup.rs
crates/site-app/style/: main.scss
crates/site-app/style/tailwind/: tailwind.config.js
crates/site-frontend/: Cargo.toml
crates/site-server/: Cargo.toml
crates/site-server/src/: fileserv.rs  main.rs
migrations/2024-05-14-110253_create_users/: up.sql
migrations/2024-05-21-034520_create_artifacts/: down.sql
migrations/2024-05-21-051052_create_mother_tongue/: down.sql  up.sql
nix/: style-js-deps.nix
old_migrations/2024-05-18-214858_create_sessions/: up.sql
old_migrations/2024-05-21-034520_create_artifacts/: up.sql
