
[workspace]
resolver = "2"
members = ["crates/*"]

# only for client-side wasm builds
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly", "experimental-islands"] }
leptos_axum = { version = "0.6", features = ["experimental-islands"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }

tracing = { version = "0.1" }
eyre = { version = "0.6" }
color-eyre = "0.6"
thiserror = { version = "1" }
cfg-if = { version = "1" }

serde = { version = "1", features = [ "derive" ] }

async-trait = { version = "0.1" }
axum = { version = "0.7", features = ["macros", "tracing"] }
bytes = { version = "1" }
console_error_panic_hook = "0.1"
console_log = "1"
http = { version = "1" }
log = "0.4"
surrealdb = { version = "1", features = [ "protocol-ws" ] }
time = { version = "0.3", features = [ "parsing", "formatting" ] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = [
  "fs", "compression-br", "compression-deflate", "compression-gzip",
  "compression-zstd",
] }
tower-sessions = { version = "0.12" }
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3", features = [ "Window" ] }

axum-login = { version = "0.15" }

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "site"

# we turn this on for the release but keep it off in dev
# https://github.com/leptos-rs/cargo-leptos/issues/271
hash-files = false

bin-package = "site-server"
lib-package = "site-frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

style-file = "crates/site-app/style/main.scss"
assets-dir = "crates/site-app/public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"

tailwind-input-file = "crates/site-app/style/main.scss"
tailwind-config-file = "crates/site-app/style/tailwind/tailwind.config.js"

# set by cargo-leptos
watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"
