[package]
name = "auth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
db = { path = "../db" }
core_types = { path = "../core_types", features = [ "ssr", "auth" ] }

async-trait.workspace = true
axum-login.workspace = true
serde.workspace = true
eyre.workspace = true
thiserror.workspace = true
time.workspace = true
tower-sessions.workspace = true
tokio.workspace = true
tracing.workspace = true

argon2 = { version = "0.5" }
tower-sessions-surrealdb-store = { version = "0.4" }
