[package]
name = "site-app"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

core_types = { path = "../core_types" }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "dep:leptos_axum", "core_types/ssr",
]
