[package]
name = "site-app"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

serde.workspace = true
thiserror.workspace = true
http.workspace = true
cfg-if.workspace = true
core_types = { path = "../core_types" }

auth = { path = "../auth", optional = true }
db = { path = "../db", optional = true }
eyre = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
time = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

web-sys.workspace = true

[features]
default = []
hydrate = [
  "leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate",
]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "dep:leptos_axum", "core_types/ssr", "dep:auth", "dep:tower-sessions",
  "dep:time", "dep:db", "dep:tokio", "dep:eyre", "dep:tracing",
]
